Two new features:
If launched as an application, with no arguments it creates a graphical dialog for loading proxies into the JVM.

If an arriving graphical proxy implements WindowListener, it will be automatically added to its display frame, befor becoming visible.